// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressTable > should render 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8 css-9mualq"
  >
    <div
      class="mx-auto px-10 lg:container"
    >
      <div
        class="-mt-1 md:mt-2"
        data-testid="AddressTable"
      >
        <div
          class="with-x-padding overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 md:border css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="w-full table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-80 min-w-80"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      Name
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden xl:table-cell no-border w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top justify-end flex-row-reverse"
                  >
                    <div
                      class=""
                    >
                      Balance
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top ml-15"
                  >
                    <div
                      class=""
                    >
                      Validated
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden lg:table-cell no-border w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Rank
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden lg:table-cell no-border w-30 min-w-30"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Info
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border"
                  colspan="1"
                  data-testid="table__th--6"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                       
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
                data-testid="TableRow"
              >
                <td
                  data-testid="AddressRow__wallet"
                >
                  <div
                    class="flex items-center px-3 my-1 min-h-17.5 pl-6 rounded-l-xl cursor-pointer group transition duration-300 space-x-4"
                  >
                    <div
                      class="w-40 flex-1"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-primary-700 hover:border-current border-b border-transparent transition-[color,border-color] duration-[200ms,350ms] delay-[0s,100ms] leading-tight"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <span
                          class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg
                              id="copy"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                />
                                <path
                                  d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                />
                              </g>
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden xl:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-end font-semibold text-theme-secondary-text whitespace-nowrap"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      33.75089801 DARK
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 font-semibold space-x-4"
                  >
                    <div
                      class="flex items-center space-x-3 overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block w-24 truncate md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.arkscan.io/wallets/D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          arkx
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden lg:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center font-semibold text-theme-secondary-text"
                  >
                    <span
                      class="text-theme-secondary-400"
                    >
                      N/A
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center"
                  >
                    <span>
                      <div
                        class="text-theme-danger-400 css-1i4b0eq"
                        data-testid="StatusIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="circle-cross"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-width="2"
                          >
                            <circle
                              cx="10"
                              cy="10"
                              r="9"
                              stroke-miterlimit="10"
                            />
                            <path
                              d="M7 13l6-6M13 13L7 7"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </g>
                        </svg>
                      </div>
                    </span>
                  </div>
                </td>
                <td
                  class="hidden lg:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center space-x-2"
                  />
                </td>
                <td
                  class="pr-6"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r-xl justify-end !pr-0"
                  >
                    <div>
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
                        data-testid="AddressRow__select-0"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Vote
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable > should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8 css-9mualq"
  >
    <div
      class="mx-auto px-10 lg:container"
    >
      <div
        class="-mt-1 md:mt-2"
        data-testid="AddressTable"
      >
        <div
          class="with-x-padding overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 md:border css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="w-full table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-80 min-w-80"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      Name
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden xl:table-cell no-border w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top justify-end flex-row-reverse"
                  >
                    <div
                      class=""
                    >
                      Balance
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      Validated
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Votes
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden lg:table-cell no-border w-30 min-w-30"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Info
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                       
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
                data-testid="TableRow"
              >
                <td
                  data-testid="AddressRow__wallet"
                >
                  <div
                    class="flex items-center px-3 my-1 min-h-17.5 pl-6 rounded-l-xl cursor-pointer group transition duration-300 space-x-4"
                  >
                    <div
                      class="w-40 flex-1"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-primary-700 hover:border-current border-b border-transparent transition-[color,border-color] duration-[200ms,350ms] delay-[0s,100ms] leading-tight"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <span
                          class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg
                              id="copy"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                />
                                <path
                                  d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                />
                              </g>
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden xl:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-end font-semibold text-theme-secondary-text whitespace-nowrap"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      33.75089801 DARK
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 font-semibold space-x-4"
                  >
                    <div
                      class="flex items-center space-x-3 overflow-hidden"
                    >
                      <div
                        class="relative !h-8 !w-8 border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-secondary-600 dark:bg-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
                      >
                        <span
                          class="text-sm font-semibold text-theme-primary-700 dark:text-theme-secondary-500"
                        >
                          +1
                        </span>
                      </div>
                      <a
                        class="ring-focus group inline-block w-24 truncate md:w-auto [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://test.arkscan.io/wallets/D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          arkx
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </div>
                  </div>
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center"
                  >
                    <div
                      class="font-semibold text-theme-secondary-400"
                    >
                      <span
                        class="text-theme-secondary-text"
                      >
                        1
                      </span>
                      <span>
                        /10
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden lg:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center space-x-2"
                  />
                </td>
                <td
                  class="pr-6"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r-xl justify-end !pr-0"
                  >
                    <div>
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
                        data-testid="AddressRow__select-0"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Vote
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable > should render with voting delegates and handle exception 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8 css-9mualq"
  >
    <div
      class="mx-auto px-10 lg:container"
    >
      <div
        class="-mt-1 md:mt-2"
        data-testid="AddressTable"
      >
        <div
          class="with-x-padding overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 md:border css-1m6rt2i"
          role="table"
        >
          <table
            cellpadding="0"
            class="w-full table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-80 min-w-80"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                      Name
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden xl:table-cell no-border w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top justify-end flex-row-reverse"
                  >
                    <div
                      class=""
                    >
                      Balance
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-60 min-w-60"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="flex flex-inline align-top ml-15"
                  >
                    <div
                      class=""
                    >
                      Validated
                    </div>
                    <div
                      class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                    >
                      <div
                        class="transition-transform rotate-180 css-15txs7d"
                        height="10"
                        role="img"
                        width="10"
                      >
                        <svg
                          id="chevron-down-small"
                          viewBox="0 0 10 10"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden lg:table-cell no-border w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Rank
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border w-20 min-w-20"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table hidden lg:table-cell no-border w-30 min-w-30"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top justify-center"
                  >
                    <div
                      class=""
                    >
                      Info
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800 first:rounded-tl-table last:rounded-tr-table no-border"
                  colspan="1"
                  data-testid="table__th--6"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top"
                  >
                    <div
                      class=""
                    >
                       
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-16ynu5g"
                data-testid="TableRow"
              >
                <td
                  data-testid="AddressRow__wallet"
                >
                  <div
                    class="flex items-center px-3 my-1 min-h-17.5 pl-6 rounded-l-xl cursor-pointer group transition duration-300 space-x-4"
                  >
                    <div
                      class="w-40 flex-1"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-base text-theme-primary-700 hover:border-current border-b border-transparent transition-[color,border-color] duration-[200ms,350ms] delay-[0s,100ms] leading-tight"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <span
                          class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg
                              id="copy"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                />
                                <path
                                  d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                />
                              </g>
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="hidden xl:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-end font-semibold text-theme-secondary-text whitespace-nowrap"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      33.75089801 DARK
                    </span>
                  </div>
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 font-semibold space-x-4"
                  >
                    <span
                      class="text-theme-secondary-400"
                    >
                      N/A
                    </span>
                  </div>
                </td>
                <td
                  class="hidden lg:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center font-semibold text-theme-secondary-text"
                  />
                </td>
                <td>
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center"
                  />
                </td>
                <td
                  class="hidden lg:table-cell"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-center space-x-2"
                  />
                </td>
                <td
                  class="pr-6"
                >
                  <div
                    class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r-xl justify-end !pr-0"
                  >
                    <div>
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
                        data-testid="AddressRow__select-0"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          Vote
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
